<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="choose_score">Choose Score --></string>
    <string name="app_name">Yahtzee</string>
    <string name="keep">Keep</string>
    <string name="button1">button1</string>
    <string name="button2" />
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="rollButton">rollButton</string>
    <string name="gameboard">GameBoard</string>
    <string name="scoresheet">ScoreSheet</string>
    <string name="die1">die1</string>
    <string name="die2">die2</string>
    <string name="die3">die3</string>
    <string name="die4">die4</string>
    <string name="die5">die5</string>
    <string name="roll">Roll</string>
    <string name="save">Saved</string>
    <string name="rolldice">Roll Dice</string>
    <string name="aces">Aces</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="threeofakind">Three of a kind</string>
    <string name="fourofakind">Four of a kind</string>
    <string name="fullhouse">Full House</string>
    <string name="smallstraight">Sm. Straight</string>
    <string name="largestraight">Lrg. Straight</string>
    <string name="yahtzee">YAHTZEE</string>
    <string name="chance">Chance</string>
    <string name="select">Select</string>
    <string name="viewscorecard">View Scorecard</string>
    <string name="totalScore">My Total Score:</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">GameScreen</string>
    <string name="new_game_button">New Game</string>
    <string name="check_av_games">Check Available Games</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_profile_button">Create Profile</string>
    <string name="first_name">First Name</string>
    <string name="enter_first">Enter First Name</string>
    <string name="email_text">Email Address</string>
    <string name="email">Email</string>
    <string name="add_user">Create</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last">Enter Last Name</string>
    <string name="current_games">Games</string>
    <string name="new_game">New Game</string>
    <string name="invites">Invites</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi-Player</string>
    <string name="game_name">Game Name : </string>
    <string name="opponent_text">Opponent :</string>
    <string name="type_username">Type Username</string>
    <string name="create_game">Create Game</string>
    <string name="roll1">Roll 1</string>
    <string name="roll2">Roll 2</string>
    <string name="roll3">Roll 3</string>
    <string name="opp_total_score">Opp Total Score : </string>
    <string name="opp_scoresheet">Opponent Score Sheet</string>
    <string name="final_tally">Final Tally</string>
    <string name="my_total">My Total :</string>
    <string name="opp_total">Opponent Total: </string>
    <string name="you_win">YOU WIN!!!</string>
    <string name="you_lose">YOU LOSE!!!</string>
    <string name="oppTotalBonus">Opponent Total(w/ Bonus):</string>
    <string name="myTotalBonus">My Total(w/ Bonus):</string>
    <string name="gcm_api">446482437058</string>
    <string name="no_profile">No profile found... Please select one of the following!</string>
    <string name="yahtzee_string">Yahtzee</string>
    <string name="title_activity_game_list_fragment_manager">GameListFragmentManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_previous_games_list">PreviousGamesList</string>

</resources>