<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yahtzee"
        android:textSize="35sp" />

    <Button
        android:id="@+id/chooseAddProfile"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/create_profile_button" />

    <Button
        android:id="@+id/chooseLogin"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/chooseAddProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="26dp"
        android:text="@string/no_profile"
        android:textSize="20sp" />

</RelativeLayout>