<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/finalTally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/final_tally"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/oppTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/opp_total"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/myTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/oppTotal"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="47dp"
        android:text="@string/my_total"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/winOrLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text=""
        android:textSize="45dp" />

    <TextView
        android:id="@+id/myTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/myTotal"
        android:layout_alignBottom="@+id/myTotal"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/oppTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/oppTotal"
        android:layout_alignBottom="@+id/oppTotal"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>